--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;700;800&display=swap');
 body {
     font-family: 'Raleway', sans-serif;
+}
+
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.container-center {
+    max-width: 600px;
+    margin: auto;
 }
