--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+hr {
+    margin: 2rem 0rem;
+}
+
 .container {
     padding: 0rem 1rem;
 }
@@ -32,4 +36,14 @@ body {
     color: var(--primary-color);
     border-radius: 2rem;
     border: 1px solid var(--primary-color);
+}
+
+.list-non-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+
 }
