--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,27 @@ hr {
     padding: 0rem 0.5rem;
 
 }
+
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+    border-bottom-left-radius: 2rem;
+}
+
+.navigation .link {
+    color: white;
+}
+
+.nav-brand {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.nav-pills {
+    text-align: right;
+}
+
+.navigation .link-active {
+    font-weight: bold;
+}
