--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 :root{
     --primary-color: #0ea5e9;
+    --gray: #9ca3af;
 }
 
 body {
@@ -70,4 +71,23 @@ hr {
 
 .navigation .link-active {
     font-weight: bold;
+}
+
+.hero {
+    padding: 2rem;
+}
+
+.hero-image {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero-heading {
+    padding-top: 1rem;
+    color: var(--gray);
+}
+
+.header-inverted {
+    color: var(--primary-color);
 }
