--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@
 
 :root{
     --primary-color: #0ea5e9;
-    --gray: #9ca3af;
+    --dark-gray: #9ca3af;
+    --off-white: #f3f4f6;
 }
 
 body {
     font-family: 'Raleway', sans-serif;
+    margin: 0px;
 }
 
 hr {
@@ -53,7 +55,7 @@ hr {
     background-color: var(--primary-color);
     color: white;
     padding: 1rem;
-    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
 }
 
 .navigation .link {
@@ -85,9 +87,39 @@ hr {
 
 .hero-heading {
     padding-top: 1rem;
-    color: var(--gray);
+    color: var(--dark-gray);
+    text-align: center;
 }
 
 .header-inverted {
     color: var(--primary-color);
+}
+
+section {
+    padding: 2rem;
+}
+
+.section h1 {
+    text-align: center;
+}
+
+.ow {
+    background-color: var(--off-white);
+}
+
+.footer {
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-left-radius: 2rem;
+}
+
+.footer .link {
+    color: white;
+
+}
+
+.footer ul {
+    padding-inline-start: 0px;
 }
